--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,9 @@
-# git+https://github.com/ashwinstr/pyrogram.git@x21
+git+https://github.com/ashwinstr/pyrogram.git@x21
 aiofiles
 dnspython
 gitpython
 heroku3
 motor
-Pyrogram
 python-decouple
 telegraph
 TgCrypto
