--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-git+https://github.com/ashwinstr/pyrogram.git@x21
+git+https://github.com/pyrogram/pyrogram.git@master
 aiofiles
 dnspython
 gitpython
